# globallm

./: .env.example  .gitignore  README.md  build_hook.py  docker-compose.yml  mkdocs.yml  pyproject.toml
.claude/: settings.local.json
.claude/commands/: globallm.md
.plans/: v0.md
docs/: index.md
spec/: agent-coordination.md  automation.md  budget-management.md  health-scoring.md  impact-analysis.md  issue-prioritization.md  redundancy-detection.md  repository-discovery.md  solution-generation.md
src/globallm/: __init__.py  cli.py  github.py  logging_config.py  scanner.py  version.py
src/globallm/agent/: heartbeat.py  identity.py
src/globallm/analysis/: dependency_graph.py  impact_calculator.py  redundancy.py
src/globallm/automation/: auto_merge.py  ci_monitor.py  pr_automation.py
src/globallm/budget/: budget_manager.py  state.py  token_estimator.py
src/globallm/cli/: analyze.py  assign.py  budget.py  cli.py  common.py  config.py  database.py  discover.py  fix.py  issues.py  prioritize.py  redundancy.py  repos.py  status.py  user.py
src/globallm/config/: __init__.py  defaults.py  loader.py  settings.py
src/globallm/discovery/: package_registry.py  repo_discoverer.py
src/globallm/filtering/: health_scorer.py  repo_filter.py
src/globallm/issues/: analyzer.py  fetcher.py  prioritizer.py
src/globallm/llm/: base.py  claude.py  openai.py  prompts.py
src/globallm/models/: issue.py  priority.py  repository.py  solution.py
src/globallm/monitoring/: dashboard.py  metrics.py
src/globallm/solution/: code_generator.py  engine.py  test_generator.py  validator.py
src/globallm/storage/: db.py  init_db.py  issue_store.py  repository_store.py
tests/: test_budget.py  test_metrics.py
