[project]
name = "globallm"
version = "0.1.0"
description = "Scan GitHub to identify impactful libraries and contribute to their success"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.45.0",
    "httpx>=0.28.1",
    "networkx>=3.4.2",
    "numpy>=2.2.1",
    "openai>=1.57.0",
    "psycopg[binary,pool]>=3.2.0",
    "pydantic>=2.10.3",
    "pygithub>=2.8.1",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "rich>=13.9.4",
    "structlog>=25.5.0",
    "ty>=0.0.7",
    "typer>=0.15.1",
]

[project.scripts]
globallm = "globallm.cli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.hooks.custom]
path = "build_hook.py"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.49",
    "mkdocstrings>=0.27.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.14.10",
]
embeddings = [
    "sentence-transformers>=5.2.0",
]
